# lem-in

./: CMakeLists.txt  Makefile  auxilliary.c  bfs_traversal.c  data_reading.c  data_validation.c  dfs_traversal.c  main.c  prepare_graph.c  print_moves.c  print_routes.c  project.h  routes_optimization.c
ftprintf/: ft.h
libft/: Makefile  ft_itoa_chk.c  libft.h
src/: auxilliary.c  bfs_traversal.c  data_reading.c  data_release.c  data_validation.c  dfs_traversal.c  find_paths.c  intermediate_path_deletion.c  main.c  paths_selection.c  paths_sort.c  prepare_paths_data.c  print_data.c  print_moves.c  print_routes.c  project.h  routes_optimization.c  unique_path_saving.c
